<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingBottom="16dp"
    tools:context=".SignupActivity">

    <!-- Section supérieure avec image de profil et titre -->
    <RelativeLayout
        android:id="@+id/first_axe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_glass"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:paddingBottom="24dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/back_profile"
            android:src="@drawable/fad5e79954583ad50ccb3f16ee64f66d"
            app:shapeAppearanceOverlay="@style/CircleImageView" />

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_profile"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/signup_title"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Formulaire d'inscription -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/first_axe"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="16dp">

            <!-- Noms (Prénom et Nom) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstname_layout"
                    style="@style/FormFieldStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:hint="@string/firstname"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastname_layout"
                    style="@style/FormFieldStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:hint="@string/lastname"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- Email et Téléphone -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    style="@style/FormFieldStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:hint="@string/email"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_layout"
                    style="@style/FormFieldStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:hint="@string/phone"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- Mots de passe -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/FormFieldStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_layout"
                    style="@style/FormFieldStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:hint="@string/confirm_password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/white"
                android:text="Sign up"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="12dp"
                app:elevation="4dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Did you forget your password ?"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/signin_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/signin"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>